--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -242,7 +242,6 @@ allow 180.150.226.99;
 allow 181.41.143.236;
 allow 181.41.143.246;
 allow 181.41.143.247;
-allow 18.232.11.51;
 allow 184.105.48.40;
 allow 184.75.223.203;
 allow 185.100.85.132;
@@ -634,6 +633,7 @@ allow 193.218.118.161;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.239.232.230;
@@ -836,6 +836,7 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
 allow 209.127.245.250;
+allow 209.127.245.251;
 allow 209.135.168.10;
 allow 209.135.168.56;
 allow 209.141.32.181;
@@ -938,6 +939,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -962,6 +964,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1482,6 +1485,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8398:111f:f05a:ac07;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1507,6 +1511,7 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 35.169.149.94;
 allow 35.215.223.6;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1746,7 +1751,6 @@ allow 87.118.122.51;
 allow 87.120.254.132;
 allow 87.120.254.192;
 allow 88.209.197.213;
-allow 88.80.20.86;
 allow 89.147.108.90;
 allow 89.147.109.226;
 allow 89.147.110.118;
