--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -241,9 +241,12 @@ allow 179.43.179.58;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 181.41.143.234;
 allow 181.41.143.236;
 allow 181.41.143.246;
 allow 181.41.143.247;
+allow 181.41.143.250;
+allow 181.41.143.252;
 allow 184.105.48.40;
 allow 184.75.223.203;
 allow 185.100.85.132;
@@ -644,6 +647,7 @@ allow 193.26.115.61;
 allow 193.35.18.105;
 allow 193.35.18.49;
 allow 193.35.18.77;
+allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -941,6 +945,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -965,6 +970,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1512,7 +1518,6 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.208.212.112;
 allow 35.0.127.52;
 allow 35.215.223.6;
 allow 37.114.41.119;
@@ -1608,6 +1613,7 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.250.38.29;
+allow 50.19.135.211;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.178.45.216;
