--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -83,6 +83,7 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:216;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:217;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:218;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:219;
+set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
@@ -668,6 +669,7 @@ set_real_ip_from 2a12:5940:52c2::2;
 set_real_ip_from 2a12:5940:9101::2;
 set_real_ip_from 2a12:5940:b4db::2;
 set_real_ip_from 2a12:5940:b4dd::2;
+set_real_ip_from 2a12:5940:c051::2;
 set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
