--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -633,6 +633,7 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
+allow 193.200.17.85;
 allow 193.218.118.133;
 allow 193.218.118.161;
 allow 193.218.118.173;
@@ -644,7 +645,6 @@ allow 193.233.133.109;
 allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
-allow 193.35.18.105;
 allow 193.35.18.49;
 allow 193.35.18.77;
 allow 193.70.80.213;
@@ -916,6 +916,7 @@ allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.110;
 allow 23.137.253.27;
+allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
@@ -1482,6 +1483,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:bb20::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1502,6 +1504,9 @@ allow 2a0f:e586:f:f:8398:111f:f05a:ac07;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a10:1fc0:1::e016:2586;
+allow 2a10:1fc0:8::a061:729b;
+allow 2a10:1fc0:d::7384:5a63;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1523,8 +1528,8 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.225.40.125;
 allow 35.0.127.52;
-allow 35.171.72.108;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1549,6 +1554,7 @@ allow 43.157.40.39;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
+allow 45.129.199.195;
 allow 45.132.246.245;
 allow 45.133.16.36;
 allow 45.134.225.36;
@@ -1585,6 +1591,7 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
+allow 45.150.108.229;
 allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1640,6 +1647,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1775,6 +1783,7 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
@@ -1852,7 +1861,6 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.4.104;
 allow 95.164.46.204;
-allow 95.168.173.143;
 allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.27.198.133;
