--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -633,6 +633,7 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
+set_real_ip_from 193.200.17.85;
 set_real_ip_from 193.218.118.133;
 set_real_ip_from 193.218.118.161;
 set_real_ip_from 193.218.118.173;
@@ -644,7 +645,6 @@ set_real_ip_from 193.233.133.109;
 set_real_ip_from 193.239.232.230;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
-set_real_ip_from 193.35.18.105;
 set_real_ip_from 193.35.18.49;
 set_real_ip_from 193.35.18.77;
 set_real_ip_from 193.70.80.213;
@@ -916,6 +916,7 @@ set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.27;
+set_real_ip_from 23.152.24.77;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
@@ -1482,6 +1483,7 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:bb20::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
+set_real_ip_from 2a0f:9400:7e11:b852::1;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
@@ -1502,6 +1504,9 @@ set_real_ip_from 2a0f:e586:f:f:8398:111f:f05a:ac07;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
+set_real_ip_from 2a10:1fc0:1::e016:2586;
+set_real_ip_from 2a10:1fc0:8::a061:729b;
+set_real_ip_from 2a10:1fc0:d::7384:5a63;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1523,8 +1528,8 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.225.40.125;
 set_real_ip_from 35.0.127.52;
-set_real_ip_from 35.171.72.108;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.190.85;
@@ -1549,6 +1554,7 @@ set_real_ip_from 43.157.40.39;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
+set_real_ip_from 45.129.199.195;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.133.16.36;
 set_real_ip_from 45.134.225.36;
@@ -1585,6 +1591,7 @@ set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
+set_real_ip_from 45.150.108.229;
 set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
@@ -1640,6 +1647,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1775,6 +1783,7 @@ set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
+set_real_ip_from 89.213.174.248;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.36.231.128;
@@ -1852,7 +1861,6 @@ set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
-set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.126.98.146;
 set_real_ip_from 96.27.198.133;
