--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -297,7 +297,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -663,6 +662,7 @@ deny 195.176.3.19;
 deny 195.176.3.20;
 deny 195.176.3.23;
 deny 195.176.3.24;
+deny 195.20.17.94;
 deny 195.26.247.0;
 deny 195.80.151.242;
 deny 195.88.74.206;
@@ -950,6 +950,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -974,6 +975,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1505,9 +1507,11 @@ deny 2a0f:e586:f:f:8398:111f:f05a:ac07;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:10::debc:26b9;
 deny 2a10:1fc0:1::e016:2586;
 deny 2a10:1fc0:8::a061:729b;
 deny 2a10:1fc0:d::7384:5a63;
+deny 2a10:1fc0:d::9c5b:b08e;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1529,6 +1533,7 @@ deny 31.129.22.65;
 deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.236.91.37;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1811,6 +1816,7 @@ deny 91.219.236.101;
 deny 91.219.237.39;
 deny 91.219.237.56;
 deny 91.219.239.166;
+deny 91.227.77.199;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.133.238.108;
@@ -1860,8 +1866,8 @@ deny 95.128.43.164;
 deny 95.142.161.63;
 deny 95.143.193.125;
 deny 95.164.4.104;
+deny 95.164.46.204;
 deny 95.211.244.28;
 deny 96.126.98.146;
 deny 96.27.198.133;
 deny 98.128.173.33;
-deny 98.80.87.86;
