--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -129,6 +129,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -659,9 +660,11 @@ deny 2a0f:e586:f:f:8398:111f:f05a:ac07;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:10::debc:26b9;
 deny 2a10:1fc0:1::e016:2586;
 deny 2a10:1fc0:8::a061:729b;
 deny 2a10:1fc0:d::7384:5a63;
+deny 2a10:1fc0:d::9c5b:b08e;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
